feat: add more authentications methods

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 PORT=
-USERNAME=
-EMAIL=
+USER_ID=
+USER_NAME=
+USER_EMAIL=
 ZENDESK_SUBDOMAIN=
-ZENDESK_TOKEN=
+ZENDESK_JWT_SECRET_MOBILE=
+ZENDESK_JWT_ID_MESSAGE=
+ZENDESK_JWT_SECRET_MESSAGE=
+ZENDESK_JWT_SECRET_CHAT=
+ZENDESK_JWT_SECRET_SSO=
